fix various deprecations and premature usages of features added in new java versions